--- a/SingaporePolytechnic.Core/SingaporePolytechnic.Core.csproj
+++ b/SingaporePolytechnic.Core/SingaporePolytechnic.Core.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -56,6 +57,7 @@
     <Compile Include="DomainServices\IRepositoryBase.cs" />
     <Compile Include="DomainServices\SPPortalApplication.cs" />
     <Compile Include="Model\Constants.cs" />
+    <Compile Include="Model\UpcomingEvent.cs" />
     <Compile Include="Model\GallerySlider.cs" />
     <Compile Include="Model\ImageSize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
