--- a/SingaporePolytechnic.Infrastructure/SingaporePolytechnic.Infrastructure.csproj
+++ b/SingaporePolytechnic.Infrastructure/SingaporePolytechnic.Infrastructure.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="DomainServices\CalendarRepository.cs" />
     <Compile Include="DomainServices\GallerySliderRepository.cs" />
+    <Compile Include="DomainServices\VideoGalleryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
