--- a/SingaporePolytechnic.Portal/SingaporePolytechnic.Portal.csproj
+++ b/SingaporePolytechnic.Portal/SingaporePolytechnic.Portal.csproj
@@ -187,6 +187,7 @@
     <None Include="ListTemplates\GallerySlider.stp" />
     <None Include="ListTemplates\Navigation.stp" />
     <None Include="ListTemplates\UpcomingEvents.stp" />
+    <None Include="ListTemplates\VideoGallery.stp" />
     <None Include="Package\Package.package">
       <PackageId>{9bf733fd-20b1-4185-bc27-ba465c4a279c}</PackageId>
     </None>
